--- a/woorischool/Cells/VIews/BoardListTableViewCell.xib
+++ b/woorischool/Cells/VIews/BoardListTableViewCell.xib
@@ -128,6 +128,10 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="isNewLabel" destination="2fe-hw-LQL" id="o7y-AE-4Gr"/>
+                <outlet property="nameLabel" destination="iAa-c3-yMs" id="Ice-l0-G03"/>
+                <outlet property="teacherNameLabel" destination="h43-48-t8W" id="99G-9n-vs6"/>
+                <outlet property="titleImageView" destination="6Ur-CT-LHX" id="34C-O9-UhF"/>
                 <outlet property="userCountLabel" destination="RoK-bl-8xe" id="j4e-Gp-N0d"/>
             </connections>
             <point key="canvasLocation" x="149.27536231884059" y="131.25"/>
