--- a/woorischool/Cells/VIews/ReReplyTableViewCell.xib
+++ b/woorischool/Cells/VIews/ReReplyTableViewCell.xib
@@ -24,14 +24,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="replyIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Hde-3a-Fzf">
-                        <rect key="frame" x="0.0" y="14" width="18" height="18"/>
+                        <rect key="frame" x="35" y="62.5" width="18" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="18" id="ZqW-Rn-Bgg"/>
                             <constraint firstAttribute="height" constant="18" id="vjU-dD-9SH"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w9J-QZ-APZ" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                        <rect key="frame" x="71" y="0.0" width="249" height="46"/>
+                        <rect key="frame" x="106" y="0.0" width="194" height="143"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8V-qr-Q3h">
                                 <rect key="frame" x="13" y="5" width="32" height="15.5"/>
@@ -40,16 +40,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="AzZ-lT-ZeD">
-                                <rect key="frame" x="13" y="25.5" width="216" height="15.5"/>
+                                <rect key="frame" x="13" y="25.5" width="161" height="112.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Labelffsafsadfasfasfadsfsafa" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uwX-sO-hMX">
-                                        <rect key="frame" x="0.0" y="0.0" width="216" height="15.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="161" height="30.5"/>
                                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hdF-L4-aMR">
-                                        <rect key="frame" x="0.0" y="15.5" width="216" height="82"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hdF-L4-aMR">
+                                        <rect key="frame" x="0.0" y="30.5" width="161" height="82"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fiM-a8-WRg">
                                                 <rect key="frame" x="0.0" y="0.0" width="82" height="82"/>
@@ -68,11 +68,32 @@
                                     </view>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zMQ-Wr-BYY">
+                                <rect key="frame" x="153" y="-0.5" width="30" height="26.5"/>
+                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="12"/>
+                                <state key="normal" title="삭제">
+                                    <color key="titleColor" name="grapefruit"/>
+                                </state>
+                                <connections>
+                                    <action selector="deleteEvent:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="gx2-PO-ne2"/>
+                                </connections>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tfc-eL-Npq">
+                                <rect key="frame" x="112" y="-0.5" width="30" height="26.5"/>
+                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="12"/>
+                                <state key="normal" title="수정">
+                                    <color key="titleColor" name="brownGrey"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" name="veryLightPinkTwo"/>
                         <constraints>
+                            <constraint firstItem="zMQ-Wr-BYY" firstAttribute="leading" secondItem="tfc-eL-Npq" secondAttribute="trailing" constant="11" id="0VI-el-aC7"/>
+                            <constraint firstItem="tfc-eL-Npq" firstAttribute="centerY" secondItem="g8V-qr-Q3h" secondAttribute="centerY" id="9LK-bu-PsT"/>
+                            <constraint firstAttribute="trailing" secondItem="zMQ-Wr-BYY" secondAttribute="trailing" constant="11" id="CFP-au-RdU"/>
                             <constraint firstItem="AzZ-lT-ZeD" firstAttribute="leading" secondItem="w9J-QZ-APZ" secondAttribute="leading" constant="13" id="IHA-Va-WoL"/>
                             <constraint firstItem="g8V-qr-Q3h" firstAttribute="leading" secondItem="w9J-QZ-APZ" secondAttribute="leading" constant="13" id="Meg-Th-XNN"/>
+                            <constraint firstItem="zMQ-Wr-BYY" firstAttribute="centerY" secondItem="g8V-qr-Q3h" secondAttribute="centerY" id="OPE-QL-Fki"/>
                             <constraint firstAttribute="trailing" secondItem="AzZ-lT-ZeD" secondAttribute="trailing" constant="20" id="bgP-Vm-8xx"/>
                             <constraint firstAttribute="bottom" secondItem="AzZ-lT-ZeD" secondAttribute="bottom" constant="5" id="khh-jo-dGg"/>
                             <constraint firstItem="g8V-qr-Q3h" firstAttribute="top" secondItem="w9J-QZ-APZ" secondAttribute="top" constant="5" id="mHy-mP-Hxn"/>
@@ -85,34 +106,43 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="zkV-gG-r6o">
-                        <rect key="frame" x="29" y="5.5" width="35" height="35"/>
+                        <rect key="frame" x="64" y="54" width="35" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="Zwi-ks-sRV"/>
                             <constraint firstAttribute="width" constant="35" id="fGs-ny-MPt"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019.03.21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEm-xz-HKW">
-                        <rect key="frame" x="259.5" y="46" width="60.5" height="14"/>
+                        <rect key="frame" x="239.5" y="143" width="60.5" height="14"/>
                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="12"/>
                         <color key="textColor" name="brownGrey"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="FEm-xz-HKW" secondAttribute="trailing" id="3Ra-2f-0RB"/>
+                    <constraint firstAttribute="trailing" secondItem="FEm-xz-HKW" secondAttribute="trailing" constant="20" id="3Ra-2f-0RB"/>
                     <constraint firstItem="w9J-QZ-APZ" firstAttribute="leading" secondItem="zkV-gG-r6o" secondAttribute="trailing" constant="7" id="895-hL-sQP"/>
-                    <constraint firstItem="Hde-3a-Fzf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8HZ-X9-zmE"/>
+                    <constraint firstItem="Hde-3a-Fzf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="35" id="8HZ-X9-zmE"/>
                     <constraint firstItem="zkV-gG-r6o" firstAttribute="centerY" secondItem="w9J-QZ-APZ" secondAttribute="centerY" id="UhE-55-FSY"/>
                     <constraint firstItem="Hde-3a-Fzf" firstAttribute="centerY" secondItem="zkV-gG-r6o" secondAttribute="centerY" id="gxz-ge-BA5"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="FEm-xz-HKW" secondAttribute="bottom" constant="12" id="h0E-LX-9nr"/>
                     <constraint firstItem="FEm-xz-HKW" firstAttribute="top" secondItem="w9J-QZ-APZ" secondAttribute="bottom" id="kTE-Jd-prB"/>
-                    <constraint firstAttribute="trailing" secondItem="w9J-QZ-APZ" secondAttribute="trailing" id="m3C-Mh-N9u"/>
+                    <constraint firstAttribute="trailing" secondItem="w9J-QZ-APZ" secondAttribute="trailing" constant="20" id="m3C-Mh-N9u"/>
                     <constraint firstItem="w9J-QZ-APZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="tOy-rx-RvD"/>
                     <constraint firstItem="zkV-gG-r6o" firstAttribute="leading" secondItem="Hde-3a-Fzf" secondAttribute="trailing" constant="11" id="wtQ-Ci-0BW"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="contentLabel" destination="uwX-sO-hMX" id="aHm-k1-bqF"/>
+                <outlet property="deleteBtn" destination="zMQ-Wr-BYY" id="yRh-ft-i2R"/>
+                <outlet property="imageViewContainerView" destination="hdF-L4-aMR" id="Fgk-Iy-8VR"/>
+                <outlet property="nameLabel" destination="g8V-qr-Q3h" id="dhR-cb-azg"/>
+                <outlet property="profileImageView" destination="zkV-gG-r6o" id="GDo-9p-M92"/>
+                <outlet property="replyImageView" destination="fiM-a8-WRg" id="P8P-Vy-Zv5"/>
+                <outlet property="timeLabel" destination="FEm-xz-HKW" id="hJf-nH-ZJw"/>
+            </connections>
             <point key="canvasLocation" x="114.49275362318842" y="86.049107142857139"/>
         </tableViewCell>
     </objects>
@@ -121,6 +151,9 @@
         <image name="replyIcon" width="18" height="18"/>
         <namedColor name="brownGrey">
             <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="grapefruit">
+            <color red="0.94901960784313721" green="0.40392156862745099" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="veryLightPinkTwo">
             <color red="0.81960784313725488" green="0.81960784313725488" blue="0.81960784313725488" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
