--- a/woorischool/Views/Parents/ModalViews/ParentsHomeRenewViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsHomeRenewViewController.xib
@@ -396,15 +396,16 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
-                                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nne-Uj-K3Y" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
+                                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nne-Uj-K3Y" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                                     <rect key="frame" x="20" y="20" width="374" height="57"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="57" id="ILB-fY-V0u"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
-                                    <inset key="titleEdgeInsets" minX="30" minY="0.0" maxX="30" maxY="0.0"/>
-                                    <state key="normal" title="[공지] 원활한 서비스 제공을 위한 업데이트 안내">
+                                    <color key="tintColor" name="greenishTeal"/>
+                                    <inset key="contentEdgeInsets" minX="13" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="titleEdgeInsets" minX="8" minY="0.0" maxX="30" maxY="0.0"/>
+                                    <state key="normal" title="[공지] 원활한 서비스 제공을 위한 업데이트 안내" image="notiIcon">
                                         <color key="titleColor" name="greyishBrown"/>
                                     </state>
                                     <userDefinedRuntimeAttributes>
@@ -558,6 +559,7 @@
     <resources>
         <image name="chevron.compact.left" catalog="system" width="32" height="64"/>
         <image name="chevron.compact.right" catalog="system" width="32" height="64"/>
+        <image name="notiIcon" width="20" height="20"/>
         <image name="profilePlaceHolder" width="60" height="60"/>
         <image name="scheduleIcon" width="21" height="20"/>
         <namedColor name="brownGrey">
